--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,8 @@ body
 {
   background: linear-gradient(145deg,#56b4d3,#348f50);
   /* font-family: 'Montserrat'; */
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 .App
@@ -51,6 +53,8 @@ header
 {
   background: linear-gradient(90deg,#56b4d3,#348f50);
   border-bottom: 1px solid #fff;
+  max-width: 100%;
+  /*overflow-x: hidden;*/
 }
 
 .App-header
@@ -62,6 +66,24 @@ header
   z-index: 100;
 }
 
+.nav-btn
+{
+  margin-top: -2px;
+  width: 160px;
+  height: 70px;
+  float: left;
+  border: 1px solid #fff;
+}
+
+.nav-profile-image
+{
+  margin-top: 15px;
+  width: 100px;
+  height: 100px;
+  border-radius: 80px;
+  border: 2px solid #3c3c3c;
+}
+
 .App-title {
   font-size: 1.5em;
 }
@@ -70,7 +92,118 @@ header
   font-size: large;
 }
 
+.xp-info-left
+{
+  position: absolute;
+  margin-top: -58px;
+  left: 22.5%;
+  width: 350px;
+  height: 100px;
+  background: url(http://casperweb.herokuapp.com/arrow-right-solid.svg);
+  background-repeat: no-repeat;
+  background-position: 100% 0%;
+}
+
+.xp-info-right
+{
+  position: absolute;
+  margin-top: -58px;
+  left: 22.5%;
+  width: 350px;
+  height: 100px;
+  background: url(http://casperweb.herokuapp.com/arrow-left-solid.svg);
+  background-repeat: no-repeat;
+  background-position: 0% 0%;
+}
+
+.education-info-left
+{
+  position: absolute;
+  margin-top: -58px;
+  left: 22.5%;
+  width: 350px;
+  height: 100px;
+  background: url(http://casperweb.herokuapp.com/arrow-right-solid.svg);
+  background-repeat: no-repeat;
+  background-position: 100% 0%;
+}
+
+.education-info-right
+{
+  position: absolute;
+  margin-top: -58px;
+  left: 52.5%;
+  width: 350px;
+  height: 100px;
+  background: url(http://casperweb.herokuapp.com/arrow-left-solid.svg);
+  background-repeat: no-repeat;
+  background-position: 0% 0%;
+}
+
+.work-history-container
+{
+  height: 400px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+@media (max-width: 375px)
+{
+  .work-history-container
+  {
+    height: 150vh;
+  }
+
+  .xp-info-left
+  {
+    width: 150px;
+    height: auto;
+    margin: -50px 0px 0px -70px;
+  }
+
+  .xp-info-right
+  {
+    width: 160px;
+    height: auto;
+    margin: -55px 0px 0px 127px;
+  }
+
+  .nav-btn
+  {
+    margin-top: -60px;
+    width: 100px;
+    height: 50px;
+    border: 1px solid #fff;
+  }
+
+  .nav-profile-image
+  {
+    margin-top: -45px;
+    width: 100px;
+    height: 100px;
+    border-radius: 80px;
+    border: 2px solid #3c3c3c;
+  }
+
+  .education-info-container
+  {
+    padding-bottom: 65vh;
+  }
+
+  .education-info-left
+  {
+    width: 150px;
+    height: auto;
+    margin: -55px 0px 0px -75px;
+  }
+
+  .education-info-right
+  {
+    width: 142px;
+    height: auto;
+    margin: -55px 0px 0px 20px;
+  }
 }
