--- a/src/App.css
+++ b/src/App.css
@@ -77,11 +77,12 @@ header
 
 .nav-profile-image
 {
-  margin-top: 15px;
-  width: 100px;
-  height: 100px;
+  margin: 15px auto -15px auto;
+  /* width: 100px;
+  height: 100px;*/
   border-radius: 80px;
   border: 2px solid #3c3c3c;
+  /* background-position: 0% 0%; */
 }
 
 .App-title {
@@ -174,8 +175,8 @@ header
   .nav-btn
   {
     margin-top: -60px;
-    width: 100px;
-    height: 50px;
+    width: 115px;
+    height: 55px;
     border: 1px solid #fff;
   }
 
@@ -186,6 +187,8 @@ header
     height: 100px;
     border-radius: 80px;
     border: 2px solid #3c3c3c;
+    float: left;
+    /* margin-left: 30vw; */
   }
 
   .education-info-container
