--- a/src/App.css
+++ b/src/App.css
@@ -146,6 +146,16 @@ header
   height: 400px;
 }
 
+.skill-container
+{
+  width: 100%;
+  margin: 0px auto 0px auto;
+  margin: 10px auto 0px auto;
+  padding: 10px;
+  background: rgba(255,255,255,.4);
+  border-radius: 5px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
