--- a/src/App.css
+++ b/src/App.css
@@ -109,12 +109,17 @@ header
 {
   position: absolute;
   margin-top: -58px;
-  left: 22.5%;
+  left: 52.5%;
   width: 350px;
   height: 100px;
   background: url(http://casperweb.herokuapp.com/arrow-left-solid.svg);
   background-repeat: no-repeat;
   background-position: 0% 0%;
+}
+
+.education-info-container
+{
+  padding-bottom: 15vh;
 }
 
 .education-info-left
@@ -143,7 +148,7 @@ header
 
 .work-history-container
 {
-  height: 400px;
+  height: 500px;
 }
 
 .skill-container
@@ -179,6 +184,12 @@ header
   border-radius: 80px;
   border: 2px dashed #ff7200;
   z-Index: 1;
+}
+
+.slider-btn:hover
+{
+  box-shadow: #343434 0px 0px 20px;
+  border: 3px solid #ff7200;
 }
 
 @keyframes App-logo-spin {
