--- a/src/App.css
+++ b/src/App.css
@@ -161,6 +161,23 @@ header
   border-radius: 5px;
 }
 
+.skill-level
+{
+  /* margin: -25px -45px 0px 0px; */
+}
+
+.skill-bar
+{
+  display: 'flex';
+  width: 100%;
+  height: 5px;
+  background-color: #3c3c3c;
+  border-radius: 5px;
+  margin-top: 10px;
+  /* margin-left: -50px; */
+  float: 'right';
+}
+
 .slideshow-container
 {
   /* height: 650px; */
@@ -199,6 +216,18 @@ header
 
 @media (max-width: 375px)
 {
+  .skill-bar
+  {
+    width: 50%;
+    height: 5px;
+    margin: -15px 0px 0px 130px;
+  }
+
+  .skill-level
+  {
+    margin: -27px -45px 0px 0px;
+  }
+
   .work-history-container
   {
     height: 150vh;
@@ -215,7 +244,7 @@ header
   {
     width: 160px;
     height: auto;
-    margin: -53px 0px 0px 127px;
+    margin: -53px 0px 0px 15px;
   }
 
   .nav-btn
