--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,11 @@ header
   /* background-position: 0% 0%; */
 }
 
+.nav-profile-image:hover
+{
+  box-shadow: #343434 0px 0px 20px;
+}
+
 .App-title {
   font-size: 1.5em;
 }
