--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   font-family: 'Montserrat';
   src:
     local('Montserrat'),
-    url('./public/fonts/Montserrat/Montserrat-Light.ttf') format('truetype');
+    url('../public/fonts/Montserrat/Montserrat-Light.ttf') format('truetype');
     font-weight: 300;
 }
 
@@ -18,7 +18,7 @@
   font-family: 'Source Serif Pro';
   src:
     local('Source Serif Pro'),
-    url('./public/fonts/SourceSerifPro/SourceSerifPro-Regular.ttf') format('truetype');
+    url('../public/fonts/SourceSerifPro/SourceSerifPro-Regular.ttf') format('truetype');
   font-weight: 400;
 }
 
@@ -27,7 +27,7 @@
   font-family: 'Lora';
   src:
     local('Lora'),
-    url('./public/fonts/Lora/Lora-Regular.ttf') format('truetype');
+    url('../public/fonts/Lora/Lora-Regular.ttf') format('truetype');
     font-weight: 400;
 }
 
@@ -105,7 +105,7 @@ header
   left: 22.5%;
   width: 350px;
   height: 100px;
-  background: url(./public/arrow-right-solid.svg);
+  background: url(../public/arrow-right-solid.svg);
   background-repeat: no-repeat;
   background-position: 100% 0%;
 }
@@ -117,7 +117,7 @@ header
   left: 52.5%;
   width: 350px;
   height: 100px;
-  background: url(./public/arrow-left-solid.svg);
+  background: url(../public/arrow-left-solid.svg);
   background-repeat: no-repeat;
   background-position: 0% 0%;
 }
@@ -134,7 +134,7 @@ header
   left: 22.5%;
   width: 350px;
   height: 100px;
-  background: url(./public/arrow-right-solid.svg);
+  background: url(../public/arrow-right-solid.svg);
   background-repeat: no-repeat;
   background-position: 100% 0%;
 }
@@ -146,7 +146,7 @@ header
   left: 52.5%;
   width: 350px;
   height: 100px;
-  background: url(./public/arrow-left-solid.svg);
+  background: url(../public/arrow-left-solid.svg);
   background-repeat: no-repeat;
   background-position: 0% 0%;
 }
