--- a/src/App.css
+++ b/src/App.css
@@ -105,7 +105,7 @@ header
   left: 22.5%;
   width: 350px;
   height: 100px;
-  background: url(./arrow-right-solid.svg);
+  background: url(./public/arrow-right-solid.svg);
   background-repeat: no-repeat;
   background-position: 100% 0%;
 }
@@ -117,7 +117,7 @@ header
   left: 52.5%;
   width: 350px;
   height: 100px;
-  background: url(./arrow-left-solid.svg);
+  background: url(./public/arrow-left-solid.svg);
   background-repeat: no-repeat;
   background-position: 0% 0%;
 }
@@ -134,7 +134,7 @@ header
   left: 22.5%;
   width: 350px;
   height: 100px;
-  background: url(./arrow-right-solid.svg);
+  background: url(./public/arrow-right-solid.svg);
   background-repeat: no-repeat;
   background-position: 100% 0%;
 }
@@ -146,7 +146,7 @@ header
   left: 52.5%;
   width: 350px;
   height: 100px;
-  background: url(./arrow-left-solid.svg);
+  background: url(./public/arrow-left-solid.svg);
   background-repeat: no-repeat;
   background-position: 0% 0%;
 }
