--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,9 @@
-*
-{
+* {
     font-family: 'Raleway', sans-serif;
 }
 
 /* Montserrat */
-@font-face
-{
+@font-face {
   font-family: 'Montserrat';
   src:
     local('Montserrat'),
@@ -31,16 +29,14 @@
     font-weight: 400;
 }
 
-body
-{
+body {
   background: linear-gradient(145deg,#56b4d3,#348f50);
   /* font-family: 'Montserrat'; */
   max-width: 100%;
   overflow-x: hidden;
 }
 
-.App
-{
+.App {
   text-align: center;
 }
 
@@ -49,16 +45,14 @@ body
   height: 80px;
 }
 
-header
-{
+header {
   background: linear-gradient(90deg,#56b4d3,#348f50);
   border-bottom: 1px solid #fff;
   max-width: 100%;
   /*overflow-x: hidden;*/
 }
 
-.App-header
-{
+.App-header {
   background-color: #222;
   /* height: 80px; */
   padding: 20px;
@@ -66,8 +60,7 @@ header
   z-index: 100;
 }
 
-.nav-btn
-{
+.nav-btn {
   margin-top: -2px;
   width: 160px;
   height: 70px;
@@ -75,8 +68,7 @@ header
   border: 1px solid #fff;
 }
 
-.nav-profile-image
-{
+.nav-profile-image {
   margin: 15px auto -15px auto;
   /* width: 100px;
   height: 100px;*/
@@ -85,8 +77,7 @@ header
   /* background-position: 0% 0%; */
 }
 
-.nav-profile-image:hover
-{
+.nav-profile-image:hover {
   box-shadow: #343434 0px 0px 20px;
 }
 
@@ -98,8 +89,7 @@ header
   font-size: large;
 }
 
-.xp-info-left
-{
+.xp-info-left {
   position: absolute;
   margin-top: -58px;
   left: 22.5%;
@@ -110,8 +100,7 @@ header
   background-position: 100% 0%;
 }
 
-.xp-info-right
-{
+.xp-info-right {
   position: absolute;
   margin-top: -58px;
   left: 52.5%;
@@ -122,13 +111,11 @@ header
   background-position: 0% 0%;
 }
 
-.education-info-container
-{
+.education-info-container {
   padding-bottom: 15vh;
 }
 
-.education-info-left
-{
+.education-info-left {
   position: absolute;
   margin-top: -58px;
   left: 22.5%;
@@ -139,8 +126,7 @@ header
   background-position: 100% 0%;
 }
 
-.education-info-right
-{
+.education-info-right {
   position: absolute;
   margin-top: -58px;
   left: 52.5%;
@@ -151,13 +137,11 @@ header
   background-position: 0% 0%;
 }
 
-.work-history-container
-{
+.work-history-container {
   height: 500px;
 }
 
-.skill-container
-{
+.skill-container {
   width: 100%;
   margin: 0px auto 0px auto;
   margin: 10px auto 0px auto;
@@ -166,13 +150,11 @@ header
   border-radius: 5px;
 }
 
-.skill-level
-{
+.skill-level {
   /* margin: -25px -45px 0px 0px; */
 }
 
-.skill-bar
-{
+.skill-bar {
   display: 'flex';
   width: 100%;
   height: 5px;
@@ -183,13 +165,11 @@ header
   float: 'right';
 }
 
-.slideshow-container
-{
+.slideshow-container {
   /* height: 650px; */
 }
 
-.slideshow
-{
+.slideshow {
   height: 650px;
   margin-top: 0px;
   width: 100%;
@@ -197,8 +177,7 @@ header
   z-Index: 1;
 }
 
-.slider-btn
-{
+.slider-btn {
   position: absolute;
   top: 340px;
   width: 80px;
@@ -208,8 +187,7 @@ header
   z-Index: 1;
 }
 
-.slider-btn:hover
-{
+.slider-btn:hover {
   box-shadow: #343434 0px 0px 20px;
   border: 3px solid #ff7200;
 }
@@ -219,49 +197,41 @@ header
   to { transform: rotate(360deg); }
 }
 
-@media (max-width: 375px)
-{
-  .skill-bar
-  {
+@media (max-width: 375px) {
+  .skill-bar {
     width: 50%;
     height: 5px;
     margin: -15px 0px 0px 130px;
   }
 
-  .skill-level
-  {
+  .skill-level {
     margin: -27px -45px 0px 0px;
   }
 
-  .work-history-container
-  {
+  .work-history-container {
     height: 150vh;
   }
 
-  .xp-info-left
-  {
+  .xp-info-left {
     width: 150px;
     height: auto;
     margin: -53px 0px 0px -75px;
   }
 
-  .xp-info-right
-  {
+  .xp-info-right {
     width: 160px;
     height: auto;
     margin: -53px 0px 0px 15px;
   }
 
-  .nav-btn
-  {
+  .nav-btn {
     margin-top: -60px;
     width: 115px;
     height: 55px;
     border: 1px solid #fff;
   }
 
-  .nav-profile-image
-  {
+  .nav-profile-image {
     margin-top: -45px;
     width: 100px;
     height: 100px;
@@ -271,33 +241,28 @@ header
     /* margin-left: 30vw; */
   }
 
-  .education-info-container
-  {
+  .education-info-container {
     padding-bottom: 65vh;
   }
 
-  .education-info-left
-  {
+  .education-info-left {
     width: 150px;
     height: auto;
     margin: -55px 0px 0px -75px;
   }
 
-  .education-info-right
-  {
+  .education-info-right {
     width: 142px;
     height: auto;
     margin: -55px 0px 0px 20px;
   }
 
-  .slideshow
-  {
+  .slideshow {
     height: 350px;
     margin: 80px auto 0px 4px;
   }
 
-  .slider-btn
-  {
+  .slider-btn {
     top: 200px;
     /* width: 80px;
     height: 80px; */
